# serializer version: 1
# name: test_get_schedule
  dict({
    'climate.comet_blue_aa_bb_cc_dd_ee_ff': dict({
      'friday': list([
        dict({
          'from': '00:00',
          'to': '00:10',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '03:30',
          'to': '21:40',
        }),
      ]),
      'monday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'saturday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'sunday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'thursday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'tuesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'wednesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
    }),
  })
# ---
# name: test_set_schedule[changed]
  dict({
    'climate.comet_blue_aa_bb_cc_dd_ee_ff': dict({
      'friday': list([
        dict({
          'from': '00:00',
          'to': '00:10',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '03:30',
          'to': '21:40',
        }),
      ]),
      'monday': list([
        dict({
          'from': '08:00',
          'to': '17:00',
        }),
      ]),
      'saturday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'sunday': list([
        dict({
          'from': '09:00',
          'to': '11:30',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '18:00',
          'to': '22:00',
        }),
      ]),
      'thursday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'tuesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'wednesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
    }),
  })
# ---
# name: test_set_schedule[deleted]
  dict({
    'climate.comet_blue_aa_bb_cc_dd_ee_ff': dict({
      'saturday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'sunday': list([
        dict({
          'from': '09:00',
          'to': '11:30',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '18:00',
          'to': '22:00',
        }),
      ]),
      'thursday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'tuesday': list([
        dict({
          'from': '09:00',
          'to': '11:30',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '18:00',
          'to': '22:00',
        }),
      ]),
      'wednesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
    }),
  })
# ---
# name: test_set_schedule[sorted]
  dict({
    'climate.comet_blue_aa_bb_cc_dd_ee_ff': dict({
      'friday': list([
        dict({
          'from': '00:00',
          'to': '00:10',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '01:40',
          'to': '03:20',
        }),
        dict({
          'from': '03:30',
          'to': '21:40',
        }),
      ]),
      'monday': list([
        dict({
          'from': '08:00',
          'to': '17:00',
        }),
      ]),
      'saturday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'sunday': list([
        dict({
          'from': '09:00',
          'to': '11:30',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '18:00',
          'to': '22:00',
        }),
      ]),
      'thursday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
      'tuesday': list([
        dict({
          'from': '09:00',
          'to': '11:30',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '13:00',
          'to': '15:00',
        }),
        dict({
          'from': '18:00',
          'to': '22:00',
        }),
      ]),
      'wednesday': list([
        dict({
          'from': '06:10',
          'to': '22:50',
        }),
      ]),
    }),
  })
# ---
